# fresheye

./: AUTHORS  BUGS  ChangeLog  Makefile.am  NEWS  TODO  config.cache  configure.in  readme.html
src/: Makefile.am  README  avl.c  avl.h  avl_low.c  ce.c  config-win32.h  context.c  context.h  cyrillic.c  cyrillic.h  fe.c  fe.h  getopt.c  getopt.h  lingtbl.c  reader.c  reader.h  tables.c  ui.c  ui.h  ui.koi8-r  util.c  util.h  wrappers.c  wrappers.h
win32/: Makefile.am  ce.dsp  config.dsp  fe.dsp  fe.dsw  readme  recode.dsp
